--- a/dicoding.css
+++ b/dicoding.css
@@ -155,8 +155,9 @@ h2{
        width: 0px;
        height: 0px;
      }
-     .foto {
+     .foto img {
       text-align: center;
+      margin
      }
   }
 
